--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
           position="0 0 0"
           scale="0.0005 0.0005 0.0005"
           gltf-model="https://arjs-cors-proxy.herokuapp.com/https://jamack3.github.io/AugmentedReality/pumpkin_1/scene.gltf"
-        ></a-entity>
+        ></a-entity></a-marker>
     
 <!--Image Example (must be a .png; the .jpg just shows up as white square, you can also modify width="200" height="100" added after src="" but before>)-->
       <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-2.patt'> 
