--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
       <a-image 
                position="0 0 -2" 
                rotation="-90 0 0" 
-               src="https://github.com/jamack3/AugmentedReality/test.png" width="200" height="100"
+               src="https:///jamack3.github.io/AugmentedReality/test.png" width="200" height="100"
       ></a-image></a-marker>      
     
 <!--Pattern Marker Example Use this Marker Generator https://jeromeetienne.github.io/AR.js/three.js/examples/marker-training/examples/generator.html-->
