--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
 <!--Image Example (must be a .png; the .jpg just shows up as white square, you can also modify width="200" height="100" added after src="" but before>)-->
       <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-2.patt'> 
       <a-image 
-               position="0 0 -2" 
+               position="0 0 0" 
                rotation="-90 0 0" 
-               src="https://jamack3.github.io/AugmentedReality/test.png" width="200" height="100"
+               src="https://jamack3.github.io/AugmentedReality/test.png"
       ></a-image></a-marker>      
     
 <!--Pattern Marker Example Use this Marker Generator https://jeromeetienne.github.io/AR.js/three.js/examples/marker-training/examples/generator.html-->
