--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
     
 <!--Pattern Marker Example Use this Marker Generator https://jeromeetienne.github.io/AR.js/three.js/examples/marker-training/examples/generator.html-->
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-3.patt'>
-    <a-text value="Say, it's Spoooky Seasonnn!" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text>
+    <a-text value="Say, \n    it's Spoooky Seasonnn!" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text>
 </a-marker>
       
 <!--Pattern Marker Example Use this Marker Generator https://jeromeetienne.github.io/AR.js/three.js/examples/marker-training/examples/generator.html-->
