--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
              <a-entity
           rotation="-90 0 0"
           position="0 0 0"
-          scale="0.0005 0.0005 0.0005"
+          scale="0.005 0.005 0.005"
           gltf-model="https://arjs-cors-proxy.herokuapp.com/https://jamack3.github.io/AugmentedReality/pumpkin_1/scene.gltf"
         ></a-entity></a-marker>
     
@@ -71,21 +71,21 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
    <a-text value="Is it working?" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text><a-image 
                position="0 0 -2" 
                rotation="-90 0 0" 
-               src="https://jamack3.github.io/AugmentedReality/poem 1.png" width="200" height="100"
+               src="https://jamack3.github.io/AugmentedReality/poem%201.png" width="200" height="100"
       ></a-image> 
 </a-marker>
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-8.patt'>
    <a-text value="?????" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text><a-image 
                position="0 0 -2" 
                rotation="-90 0 0" 
-               src="https://jamack3.github.io/AugmentedReality/poem 2.png" width="200" height="100"
+               src="https://jamack3.github.io/AugmentedReality/poem@202.png" width="200" height="100"
       ></a-image> 
 </a-marker>
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-9.patt'>
    <a-text value="heyyyyy" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text><a-image 
                position="0 0 -2" 
                rotation="-90 0 0" 
-               src="https://jamack3.github.io/AugmentedReality/poem 3.png" width="200" height="100"
+               src="https://jamack3.github.io/AugmentedReality/poem@203.png" width="200" height="100"
       ></a-image> 
 </a-marker>
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-10.patt'><a-text value="Creativity is intelligence having fun. - Albert Einstein" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text
