--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
  <a-image 
                position="0 0 -2" 
                rotation="-90 0 0" 
-               src="https://jamack3.github.io/AugmentedReality/boo.png" width="200" height="100"
+               src="https://jamack3.github.io/AugmentedReality/boo.png"
       ></a-image>  
 </a-marker>
       
@@ -59,7 +59,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
   <a-text value="Stay Spooky" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text><a-image 
                position="0 0 -2" 
                rotation="-90 0 0" 
-               src="https://jamack3.github.io/AugmentedReality/halloween.png" width="200" height="100"
+               src="https://jamack3.github.io/AugmentedReality/halloween.png"
       ></a-image>  
 </a-marker>
       
@@ -71,21 +71,21 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
    <a-text value="Is it working?" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text><a-image 
                position="0 0 -2" 
                rotation="-90 0 0" 
-               src="https://jamack3.github.io/AugmentedReality/poem%201.png" width="200" height="100"
+               src="https://jamack3.github.io/AugmentedReality/poem%201.png" 
       ></a-image> 
 </a-marker>
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-8.patt'>
    <a-text value="?????" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text><a-image 
                position="0 0 -2" 
                rotation="-90 0 0" 
-               src="https://jamack3.github.io/AugmentedReality/poem@202.png" width="200" height="100"
+               src="https://jamack3.github.io/AugmentedReality/poem@202.png" 
       ></a-image> 
 </a-marker>
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-9.patt'>
    <a-text value="heyyyyy" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text><a-image 
                position="0 0 -2" 
                rotation="-90 0 0" 
-               src="https://jamack3.github.io/AugmentedReality/poem@203.png" width="200" height="100"
+               src="https://jamack3.github.io/AugmentedReality/poem@203.png"
       ></a-image> 
 </a-marker>
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-10.patt'><a-text value="Creativity is intelligence having fun. - Albert Einstein" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text
@@ -94,7 +94,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-11.patt'><a-image 
                position="0 0 -2" 
                rotation="-90 0 0" 
-               src="https://jamack3.github.io/AugmentedReality/wzuppp.png" width="200" height="100"
+               src="https://jamack3.github.io/AugmentedReality/wzuppp.png"
       ></a-image> 
 </a-marker>
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-12.patt'></a-marker>  
