--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
       ></a-image> 
 </a-marker>
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-8.patt'>
-   <a-text value="?????" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text><a-image 
+   <a-image 
                position="0 0 -2" 
                rotation="-90 0 0" 
-               src="https://jamack3.github.io/AugmentedReality/poem@202.png" 
+               src="https://jamack3.github.io/AugmentedReality/poem%202.png" 
       ></a-image> 
 </a-marker>
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-9.patt'>
-   <a-text value="heyyyyy" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text><a-image 
+   <a-image 
                position="0 0 -2" 
                rotation="-90 0 0" 
-               src="https://jamack3.github.io/AugmentedReality/poem@203.png"
+               src="https://jamack3.github.io/AugmentedReality/poem%203.png"
       ></a-image> 
 </a-marker>
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-10.patt'><a-text value="Creativity is intelligence having fun. - Albert Einstein" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text
