--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
     
 <!--Pattern Marker Example Use this Marker Generator https://jeromeetienne.github.io/AR.js/three.js/examples/marker-training/examples/generator.html-->
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-3.patt'>
-    <a-text value="Say, \n    it's Spoooky Seasonnn!" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text>
+    <a-text value="Say,    \n    it's Spoooky Seasonnn!" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text>
 </a-marker>
       
 <!--Pattern Marker Example Use this Marker Generator https://jeromeetienne.github.io/AR.js/three.js/examples/marker-training/examples/generator.html-->
@@ -70,30 +70,30 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-7.patt'>
    <a-text value="Is it working?" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text><a-image 
                position="0 0 -2" 
-               rotation="-90 0 0" 
+               rotation="-90 0 180" 
                src="https://jamack3.github.io/AugmentedReality/poem%201.png" 
       ></a-image> 
 </a-marker>
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-8.patt'>
    <a-image 
                position="0 0 -2" 
-               rotation="-90 0 0" 
+               rotation="-90 0 180" 
                src="https://jamack3.github.io/AugmentedReality/poem%202.png" 
       ></a-image> 
 </a-marker>
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-9.patt'>
    <a-image 
                position="0 0 -2" 
-               rotation="-90 0 0" 
+               rotation="-90 0 180" 
                src="https://jamack3.github.io/AugmentedReality/poem%203.png"
       ></a-image> 
 </a-marker>
-<a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-10.patt'><a-text value="Creativity is intelligence having fun. - Albert Einstein" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text
+<a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-10.patt'><a-text value="Creativity is intelligence      \n       having fun. - Albert Einstein" color="#006F71" position="-1 0 1" rotation="-90 0 0"></a-text
   ></a-marker>       
   
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-11.patt'><a-image 
                position="0 0 -2" 
-               rotation="-90 0 0" 
+               rotation="-90 0 180" 
                src="https://jamack3.github.io/AugmentedReality/wzuppp.png"
       ></a-image> 
 </a-marker>
