--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
       ></a-image></a-marker>
       
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-12.patt'> 
-             <a-entity
+             <a-text value="WHAT?" color="#006F71" position="0 0 -1" rotation="-90 0 0"></a-text><a-entity
           rotation="-90 0 0"
           position="0 0 0"
           scale="0.05 0.05 0.05"
