--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-5.patt'>
   <a-text value="Stay Spooky" color="#ff471a" position="-1 0 1" rotation="-90 0 0"></a-text><a-image 
                position="0 0 0" 
-               rotation="90 90 0" 
+               rotation="-90 0 0" 
                src="https://jamack3.github.io/AugmentedReality/halloween.png"
       ></a-image>  
 </a-marker>
@@ -69,7 +69,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-7.patt'>
   <a-image 
                position="0 0 0" 
-               rotation="180 0 0" 
+               rotation="180 0 180" 
                src="https://jamack3.github.io/AugmentedReality/poem%201.png"
       ></a-image> 
 </a-marker>
@@ -85,7 +85,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-9.patt'>
   <a-image 
                position="0 0 0" 
-               rotation="-90 0 0" 
+               rotation="-90 0 180" 
                src="https://jamack3.github.io/AugmentedReality/poem%203.png"
       ></a-image>
 </a-marker>
@@ -111,7 +111,11 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-13.patt'>
   <a-text value="Creativity is intelligence      \n       having fun. - Albert Einstein" color="#006F71" position="-1 0 1" rotation="-90 0 0">
   </a-text></a-marker>  
-      
+<a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-16.patt'><a-image 
+               position="0 0 0" 
+               rotation="90 0 0" 
+               src="https://jamack3.github.io/AugmentedReality/wzuppp.png"
+      ></a-image>      
      <a-entity camera></a-entity>
     </a-scene>
   </body>
