--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-7.patt'>
   <a-image 
                position="0 0 0" 
-               rotation="180 0 180" 
+               rotation="-90 0 0" 
                src="https://jamack3.github.io/AugmentedReality/poem%201.png"
       ></a-image> 
 </a-marker>
@@ -78,7 +78,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
 <a-image 
                position="0 0 0" 
                rotation="90 0 0" 
-               src="https://jamack3.github.io/AugmentedReality/poem%202.png"
+               src="https://jamack3.github.io/AugmentedReality/poem2.png"
       ></a-image>
 </a-marker>
       
