--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
 <a-image 
                position="0 0 0" 
                rotation="90 0 0" 
-               src="https://jamack3.github.io/AugmentedReality/poem2.png"
+               src="https://jamack3.github.io/AugmentedReality/wzuppp.png"
       ></a-image>
 </a-marker>
       
@@ -97,7 +97,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-11.patt'><a-image 
                position="0 0 0" 
                rotation="90 0 0" 
-               src="https://jamack3.github.io/AugmentedReality/wzuppp.png"
+               src=
       ></a-image></a-marker>
       
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-12.patt'> 
@@ -114,7 +114,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-16.patt'><a-image 
                position="0 0 0" 
                rotation="90 0 0" 
-               src="https://jamack3.github.io/AugmentedReality/wzuppp.png"
+               src="https://jamack3.github.io/AugmentedReality/poem%202.png"
       ></a-image>      
      <a-entity camera></a-entity>
     </a-scene>
