--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
   <a-text value="Creativity is intelligence      \n       having fun. - Albert Einstein" color="#ff471a" position="-1 0 1" rotation="-90 0 0">
   </a-text></a-marker>       
   
-<a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-11.patt'><a-image 
+<a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-11.patt'>
+  <a-image 
                position="0 0 0" 
                rotation="90 0 0" 
-               src=
+               src="https://jamack3.github.io/AugmentedReality/wzuppp.png"
       ></a-image></a-marker>
       
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-12.patt'> 
@@ -112,7 +113,8 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-13.patt'>
   <a-text value="Creativity is intelligence      \n       having fun. - Albert Einstein" color="#006F71" position="-1 0 1" rotation="-90 0 0">
   </a-text></a-marker>  
-<a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-16.patt'><a-image 
+<a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-16.patt'>
+  <a-image 
                position="0 0 0" 
                rotation="90 0 0" 
                src="https://jamack3.github.io/AugmentedReality/poem%202.png"
