--- a/index.html
+++ b/index.html
@@ -113,13 +113,24 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-13.patt'>
   <a-text value="Creativity is intelligence      \n       having fun. - Albert Einstein" color="#006F71" position="-1 0 1" rotation="-90 0 0">
   </a-text></a-marker>  
-<a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-16.patt'>
+<a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-14.patt'>
   <a-image 
                position="0 0 0" 
                rotation="90 0 0" 
                src="https://jamack3.github.io/AugmentedReality/poem%202.png"
-      ></a-image>      
-     <a-entity camera></a-entity>
+      ></a-image></a-marker>
+      
+<a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-15.patt'>
+      </a-marker>
+      
+<a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-16.patt'>
+             <a-entity
+          rotation="-90 0 0"
+          position="0 0 0"
+          scale="0.005 0.005 0.005"
+          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://jamack3.github.io/AugmentedReality/halloween_tree/scene.gltf"
+        ></a-entity></a-marker>
+<a-entity camera></a-entity>
     </a-scene>
   </body>
 <!-- partial -->
