--- a/index.html
+++ b/index.html
@@ -121,13 +121,17 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
       ></a-image></a-marker>
       
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-15.patt'>
-      </a-marker>
+        <a-image 
+               position="0 0 0" 
+               rotation="90 0 0" 
+               src="https://jamack3.github.io/AugmentedReality/mask.png"
+      ></a-image></a-marker>
       
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-16.patt'>
              <a-entity
           rotation="-90 0 0"
           position="0 0 0"
-          scale="0.005 0.005 0.005"
+          scale="0.05 0.05 0.05"
           gltf-model="https://arjs-cors-proxy.herokuapp.com/https://jamack3.github.io/AugmentedReality/halloween_tree/scene.gltf"
         ></a-entity></a-marker>
 <a-entity camera></a-entity>
