--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
   <a-entity
           rotation="-90 0 0"
           position="0 0 0"
-          scale="0.005 0.005 0.005"
+          scale="0.003 0.003 0.003"
           gltf-model="https://arjs-cors-proxy.herokuapp.com/https://jamack3.github.io/AugmentedReality/stylised_candles/scene.gltf">
   </a-entity></a-marker>  
       
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-13.patt'>
-  <a-text value="Creativity is intelligence      \n       having fun. - Albert Einstein" color="#006F71" position="-1 0 1" rotation="-90 0 0">
+  <a-text value="A mask      \n  Tells us more    \n     Than a face.    \n    -- Oscar Wilde" color="#006F71" position="-1 0 1" rotation="-90 0 0">
   </a-text></a-marker>  
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-14.patt'>
   <a-image 
