--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Check that gltf is working at https://gltf-viewer.donmccurdy.com/
   </a-entity></a-marker>  
       
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-13.patt'>
-  <a-text value="A mask      \n  Tells us more    \n     Than a face.    \n    -- Oscar Wilde" color="#006F71" position="-1 0 1" rotation="-90 0 0">
+  <a-text value="A mask      \n  Tells us more    \n     Than a face.    \n    -- Oscar Wilde" color="#ff471a" position="-1 0 1" rotation="-90 0 0">
   </a-text></a-marker>  
 <a-marker type='pattern' url='https://jamack3.github.io/AugmentedReality/pattern-14.patt'>
   <a-image 
